--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -100,24 +100,24 @@
 
 #chooser1 {
   border: 1px solid #c2c2c2;
-  width: 10px;
-  height: 10px;
+  width: -20px;
+  height: -20px;
   border-radius: 35px;
   position: absolute;
   bottom: 5%;
-  left: 52%;
-  padding: 20px;
+  left: 51%;
+  padding: 10px;
 }
 
 #chooser2 {
   border: 1px solid #c2c2c2;
-  width: 10px;
-  height: 10px;
+  width: -20px;
+  height: -20px;
   border-radius: 45px;
   position: absolute;
   bottom: 5%;
-  left: 48%;
-  padding: 20px;
+  left: 49%;
+  padding: 10px;
 }
 
 .chooser.active {
@@ -302,6 +302,66 @@
   -webkit-transition: 300ms;
   transition: 300ms;
   border-bottom: 2px solid transparent;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 1605px) {
+  #categories_wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 1334px) {
+  #heroTag {
+    bottom: 25%;
+  }
+  #heroTag h2 {
+    font-size: 35px;
+  }
+  .reel_images {
+    padding: 5px 20px 5px 20px;
+  }
+}
+
+@media only screen and (max-width: 934px) {
+  #heroTag {
+    position: static;
+    text-align: center;
+    left: 25%;
+    color: black;
+    background-color: white;
+  }
+  #heroTag h2 {
+    font-size: 25px;
+  }
+  #chooser1 {
+    visibility: hidden;
+  }
+  #chooser2 {
+    visibility: hidden;
+  }
+  #home_reel {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .reel_images {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+  .category_image {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .reel_images {
+    width: 60%;
+  }
 }
 
 #product_div {
@@ -584,6 +644,10 @@
   opacity: 0;
 }
 
+.spacer {
+  margin: 0px 10px 0px 10px;
+}
+
 .cart {
   color: #e21a36;
 }
@@ -618,6 +682,51 @@
   border: none;
   padding: 0;
   margin: 1px 0 0 0;
+}
+
+@media only screen and (max-width: 934px) {
+  #top_header_wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #main_logo_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #functionality_header_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    width: 40%;
+    margin-top: 15px;
+  }
+  .signIn {
+    font-size: 20px;
+  }
+  .cart {
+    font-size: 20px;
+  }
+  .non_visible {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  #functionality_header_container {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  #functionality_header_container {
+    width: 90%;
+  }
 }
 
 #navigation_container {
@@ -769,6 +878,42 @@
 #red_shipping_info {
   color: #e21a36;
   font-weight: 600;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 770px) {
+  #navigation_container {
+    height: auto;
+  }
+  #navigation_wrapper {
+    height: auto;
+    width: 100%;
+  }
+  #navigation_list {
+    height: auto;
+  }
+  #navigation_list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 11;
+  }
+  #menu_item_1 {
+    border: 1px solid #666;
+  }
+  #menu_item_2 {
+    border: 1px solid #666;
+  }
+  #menu_item_3 {
+    border: 1px solid #666;
+  }
+  #menu_item_4 {
+    border: 1px solid #666;
+  }
+  #shipping_info {
+    width: 100%;
+  }
 }
 
 #single_item_page {
