--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -37,6 +37,12 @@
 
 }
 
+.spacer {
+
+    margin: 0px 10px 0px 10px;
+
+}
+
 .cart {
 
     color: #e21a36;
@@ -79,6 +85,66 @@
     margin: 1px 0 0 0;
 }
 
+@media only screen and (max-width: 934px) {
+    
+    #top_header_wrapper {
+
+        flex-direction: column;
+
+    }
+    
+    #main_logo_container {
+
+        display: flex;
+        justify-content: center;
+
+    }
+
+    #functionality_header_container {
+
+        align-self: center;
+        width: 40%;
+        margin-top: 15px;
+    }
+
+    .signIn {
+        font-size: 20px;
+    }
+
+    .cart {
+        font-size: 20px;
+    }
+    
+    .non_visible {
+
+        display: none;
+    }
+        
+}
+
+@media only screen and (max-width: 770px) {
+
+    #functionality_header_container {
+
+
+        width: 60%;
+    
+    }
+
+
+}
+
+@media only screen and (max-width: 580px) {
+
+    #functionality_header_container {
+
+
+        width: 90%;
+    
+    }
+
+
+}
 
 
 
