--- a/public/styles/home_page.scss
+++ b/public/styles/home_page.scss
@@ -94,26 +94,26 @@
 #chooser1 {
 
     border: 1px solid rgb(194, 194, 194);
-    width: 10px;
-    height: 10px;
+    width: -20px;
+    height: -20px;
     border-radius: 35px;
     position: absolute;
     bottom: 5%;
-    left: 52%;
-    padding: 20px;
+    left: 51%;
+    padding: 10px;
 
 }
 
 #chooser2 {
 
     border: 1px solid rgb(194, 194, 194);
-    width: 10px;
-    height: 10px;
+    width: -20px;
+    height: -20px;
     border-radius: 45px;
     position: absolute;
     bottom: 5%;
-    left: 48%;
-    padding: 20px;
+    left: 49%;
+    padding: 10px;
 
 }
 
@@ -288,7 +288,101 @@
 }
 
 
+/* Media Queries */ 
 
+@media only screen and (max-width: 1605px) {
+    
+    #categories_wrapper {
+
+        flex-wrap: wrap;
+
+    }
+
+}
+
+@media only screen and (max-width: 1334px) {
+
+    #heroTag {
+
+        bottom: 25%;
+
+    }
+
+    #heroTag h2 {
+
+        font-size: 35px;
+
+    }
+
+    .reel_images {
+
+        padding: 5px 20px 5px 20px;
+
+    }
+
+}
+
+@media only screen and (max-width: 934px) {
+
+    #heroTag {
+
+        position: static;
+        text-align: center;
+        left: 25%;
+        color: black;
+        background-color: white;
+
+    }
+
+    #heroTag h2 {
+
+        font-size: 25px;
+    
+    }
+
+    #chooser1 {
+
+        visibility: hidden;
+
+    }
+
+    #chooser2 {
+
+        visibility: hidden;
+
+    }
+
+    #home_reel {
+        flex-direction: column;
+    }
+    
+    .reel_images {
+
+        margin-left: auto;
+        margin-right: auto;
+        width: 30%;
+        
+    }
+
+    .category_image {
+
+        width: 250px;
+        height: 250px;
+
+    }
+
+}
+
+@media only screen and (max-width: 580px) {
+
+    .reel_images {
+
+        width: 60%;
+
+    }
+
+
+}
 
 
 
