--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -148,4 +148,40 @@
   color: #e21a36;
   font-weight: 600;
 }
+
+/* Media Queries */
+@media only screen and (max-width: 770px) {
+  #navigation_container {
+    height: auto;
+  }
+  #navigation_wrapper {
+    height: auto;
+    width: 100%;
+  }
+  #navigation_list {
+    height: auto;
+  }
+  #navigation_list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 11;
+  }
+  #menu_item_1 {
+    border: 1px solid #666;
+  }
+  #menu_item_2 {
+    border: 1px solid #666;
+  }
+  #menu_item_3 {
+    border: 1px solid #666;
+  }
+  #menu_item_4 {
+    border: 1px solid #666;
+  }
+  #shipping_info {
+    width: 100%;
+  }
+}
 /*# sourceMappingURL=navigation.css.map */
