Made products (item list) pages responsive. Close to finishing single product pages

--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -180,6 +180,12 @@
   #menu_item_4 {
     border: 1px solid #666;
   }
+  #menu_item_5 {
+    border: 1px solid #666;
+  }
+  #menu_item_6 {
+    border: 1px solid #666;
+  }
   #shipping_info {
     width: 100%;
   }
