--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -521,8 +521,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 15px;
-  width: 28%;
+  margin: 15px;
+  width: 280px;
 }
 
 #add_cart_div {
@@ -581,6 +581,60 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+/* Media Queries */
+@media only screen and (max-width: 950px) {
+  #product_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #shopping_options_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    width: 60%;
+  }
+  #item_list_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #image_banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 85%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #banner_content_wrapper {
+    position: static;
+    padding: 8px;
+  }
+  .item_button.button_product_page {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  #image_banner {
+    width: 100%;
+  }
+  #banner_content_wrapper {
+    padding: 0;
+    text-align: center;
+  }
+  #shopping_options_container {
+    width: 80%;
   }
 }
 
@@ -911,6 +965,12 @@
   #menu_item_4 {
     border: 1px solid #666;
   }
+  #menu_item_5 {
+    border: 1px solid #666;
+  }
+  #menu_item_6 {
+    border: 1px solid #666;
+  }
   #shipping_info {
     width: 100%;
   }
@@ -1134,6 +1194,54 @@
 
 #single_item_information p {
   font-size: 20px;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 1070px) {
+  #gallery_container {
+    width: 100%;
+    margin: 0 auto 0 auto;
+  }
+  #single_item_product_information {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #outer_image_gallery_single {
+    width: 60%;
+    margin: 0 auto 0 auto;
+  }
+  #item_info_container {
+    text-align: center;
+    width: 60%;
+    margin: 0 auto 0 auto;
+  }
+  #add_cart_div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  #image_gallery_single {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  #outer_image_gallery_single {
+    width: 80%;
+  }
+  #image_gallery_single {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .form_warning {
