--- a/public/styles/navigation.scss
+++ b/public/styles/navigation.scss
@@ -168,6 +168,18 @@
         border: 1px solid #666;
     
     }
+
+    #menu_item_5 {
+    
+        border: 1px solid #666;
+    
+    }
+
+    #menu_item_6 {
+    
+        border: 1px solid #666;
+    
+    }
     
     #shipping_info {
 
