--- a/public/styles/product_page.css
+++ b/public/styles/product_page.css
@@ -155,8 +155,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 15px;
-  width: 28%;
+  margin: 15px;
+  width: 280px;
 }
 
 #add_cart_div {
@@ -215,6 +215,60 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+/* Media Queries */
+@media only screen and (max-width: 950px) {
+  #product_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #shopping_options_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    width: 60%;
+  }
+  #item_list_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #image_banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 85%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #banner_content_wrapper {
+    position: static;
+    padding: 8px;
+  }
+  .item_button.button_product_page {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  #image_banner {
+    width: 100%;
+  }
+  #banner_content_wrapper {
+    padding: 0;
+    text-align: center;
+  }
+  #shopping_options_container {
+    width: 80%;
   }
 }
 /*# sourceMappingURL=product_page.css.map */
