--- a/public/styles/single_product.css
+++ b/public/styles/single_product.css
@@ -217,4 +217,52 @@
 #single_item_information p {
   font-size: 20px;
 }
+
+/* Media Queries */
+@media only screen and (max-width: 1070px) {
+  #gallery_container {
+    width: 100%;
+    margin: 0 auto 0 auto;
+  }
+  #single_item_product_information {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #outer_image_gallery_single {
+    width: 60%;
+    margin: 0 auto 0 auto;
+  }
+  #item_info_container {
+    text-align: center;
+    width: 60%;
+    margin: 0 auto 0 auto;
+  }
+  #add_cart_div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  #image_gallery_single {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  #outer_image_gallery_single {
+    width: 80%;
+  }
+  #image_gallery_single {
+    width: 100%;
+    height: 100%;
+  }
+}
 /*# sourceMappingURL=single_product.css.map */
