--- a/public/styles/single_product.scss
+++ b/public/styles/single_product.scss
@@ -200,3 +200,74 @@
     font-size: 20px;
 
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 1070px){
+    #gallery_container {
+
+        width: 100%;
+        margin: 0 auto 0 auto;
+
+    }
+
+    #single_item_product_information {
+
+        flex-direction: column;
+
+    }
+
+
+    #outer_image_gallery_single {
+
+        width: 60%;
+        margin: 0 auto 0 auto;
+
+    }
+    
+    #item_info_container {
+
+        text-align: center;
+        width: 60%;
+        margin: 0 auto 0 auto;
+    }
+
+    #add_cart_div {
+
+        display: flex;
+        justify-content: center;
+
+    }
+
+
+}
+
+@media only screen and (max-width: 690px) {
+    
+    #image_gallery_single {
+
+        width: 300px;
+        height: 300px;
+
+    }
+
+}
+
+
+@media only screen and (max-width: 690px) {
+    
+    #outer_image_gallery_single {
+
+        width: 80%;
+
+    }
+
+    #image_gallery_single {
+
+        width: 100%;
+        height: 100%;
+
+    }
+
+}
+
