added footer and finished responsive single product page. Also added space for pages for footer.

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -10,6 +10,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 75px;
 }
 
 #cart_container {
