--- a/public/styles/home_page.css
+++ b/public/styles/home_page.css
@@ -151,7 +151,7 @@
 }
 
 .reel_images {
-  padding: 10px 40px 10px 40px;
+  padding: 10px 60px 10px 60px;
   width: 16.6667%;
 }
 
@@ -172,7 +172,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 55px;
+  margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 #category_line {
