--- a/public/styles/home_page.scss
+++ b/public/styles/home_page.scss
@@ -143,7 +143,7 @@
 
 .reel_images {
 
-    padding: 10px 40px 10px 40px;
+    padding: 10px 60px 10px 60px;
     width: 16.6667%;
 }
 
@@ -161,7 +161,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 55px;
+    margin-top: 75px;
+    margin-bottom: 75px;
 
 }
 
