--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -5,11 +5,11 @@
 @import "./single_product.scss";
 @import "./login.scss";
 @import "./cart.scss";
-
+@import "./footer.scss";
 
 
 body {
-    margin: 0;
+    margin: 0 0 0 0;
     color: rgb(70, 70, 70);
 }
 
