--- a/public/styles/login.scss
+++ b/public/styles/login.scss
@@ -15,6 +15,7 @@
     margin-right: auto;
     width: 65%;
     padding-top: 20px;
+    margin-bottom: 75px;
 
 }
 
@@ -105,6 +106,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
+    margin-bottom: 120px;
 }
 
 #create_form {
