--- a/public/styles/single_product.css
+++ b/public/styles/single_product.css
@@ -250,19 +250,15 @@
 }
 
 @media only screen and (max-width: 690px) {
-  #image_gallery_single {
-    width: 300px;
-    height: 300px;
-  }
-}
-
-@media only screen and (max-width: 690px) {
   #outer_image_gallery_single {
-    width: 80%;
+    width: 90%;
   }
   #image_gallery_single {
     width: 100%;
     height: 100%;
+  }
+  #item_info_container {
+    width: 90% !important;
   }
 }
 /*# sourceMappingURL=single_product.css.map */
