--- a/public/styles/single_product.scss
+++ b/public/styles/single_product.scss
@@ -244,21 +244,9 @@
 
 @media only screen and (max-width: 690px) {
     
-    #image_gallery_single {
-
-        width: 300px;
-        height: 300px;
-
-    }
-
-}
-
-
-@media only screen and (max-width: 690px) {
-    
     #outer_image_gallery_single {
 
-        width: 80%;
+        width: 90%;
 
     }
 
@@ -269,5 +257,12 @@
 
     }
 
+    #item_info_container {
+
+        width: 90%!important;
+
+    }
+
 }
+
 
