added the (remove item) functionality for the cart

--- a/public/styles/login.scss
+++ b/public/styles/login.scss
@@ -15,7 +15,8 @@
     margin-right: auto;
     width: 65%;
     padding-top: 20px;
-    margin-bottom: 75px;
+    margin-top: 50px;
+    margin-bottom: 120px;
 
 }
 
@@ -106,7 +107,8 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
-    margin-bottom: 120px;
+    margin-top: 75px;
+    margin-bottom: 150px;
 }
 
 #create_form {
