--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1014,6 +1014,10 @@
       align-self: center;
 }
 
+#single_item_information {
+  margin-bottom: 75px;
+}
+
 .item_page_margin {
   margin-top: 30px;
 }
@@ -1256,7 +1260,8 @@
   margin-right: auto;
   width: 65%;
   padding-top: 20px;
-  margin-bottom: 75px;
+  margin-top: 50px;
+  margin-bottom: 120px;
 }
 
 #login_page_container hr {
@@ -1356,6 +1361,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: 20px;
+  margin-top: 75px;
   margin-bottom: 120px;
 }
 
