--- a/public/styles/single_product.css
+++ b/public/styles/single_product.css
@@ -33,6 +33,10 @@
       align-self: center;
 }
 
+#single_item_information {
+  margin-bottom: 75px;
+}
+
 .item_page_margin {
   margin-top: 30px;
 }
