adding functionality for checkout page.

--- a/public/styles/checkout.css
+++ b/public/styles/checkout.css
@@ -1,4 +1,8 @@
 /* checkout page stylings */
+#middle_row_checkout {
+  width: 33%;
+}
+
 .input_sizes {
   height: 40px;
   border: 1px solid #b3b3b3;
@@ -16,6 +20,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #e5e5e5;
+  padding-bottom: 75px;
 }
 
 #announce {
@@ -83,6 +88,9 @@
   background-color: white;
   width: 33%;
   margin: 10px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 #shipping_address_form {
@@ -116,7 +124,7 @@
 }
 
 #last_name_1, #first_name_1 {
-  width: 50%;
+  width: 100%;
 }
 
 #shipping_method_container {
@@ -146,9 +154,26 @@
 }
 
 /*payment section */
+#credit_card_form {
+  margin-bottom: 10px;
+}
+
+#date_and_cvv {
+  width: 100%;
+}
+
+#expiry_date {
+  width: 100%;
+}
+
+#CVV {
+  width: 100%;
+}
+
 /* container */
 #payment_section {
   background-color: white;
+  padding-bottom: 10px;
   margin: 10px;
 }
 
@@ -180,11 +205,26 @@
 }
 
 /* order summary section */
+#amount_of_items {
+  margin-left: 30px;
+}
+
+#order_summary_item_list hr {
+  width: 90%;
+}
+
+#order_summary_item_list {
+  margin: 10px;
+}
+
 /* container */
 #order_summary_section {
   background-color: white;
   width: 33%;
   margin: 10px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .order_summary_item {
@@ -195,6 +235,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .order_summary_info_item {
@@ -208,5 +251,6 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 10px;
 }
 /*# sourceMappingURL=checkout.css.map */
