--- a/public/styles/checkout.scss
+++ b/public/styles/checkout.scss
@@ -1,5 +1,11 @@
 /* checkout page stylings */ 
 
+#middle_row_checkout {
+
+    width: 33%;
+
+}
+
 .input_sizes {
 
     height: 40px;
@@ -7,14 +13,13 @@
 
 }
 
-
-
 #checkout_div_container {
 
     display: flex;
     justify-content: center;
     flex-direction: column;
     background-color: #e5e5e5;
+    padding-bottom: 75px;
 }
 
 #announce {
@@ -68,7 +73,8 @@
 
     background-color: rgb(255, 255, 255);
     width: 33%;
-    margin: 10px
+    margin: 10px;
+    height: fit-content;
 
 }
 
@@ -101,7 +107,7 @@
 
 #last_name_1, #first_name_1 {
 
-    width: 50%;
+    width: 100%;
 
 }
 
@@ -140,11 +146,36 @@
 
 /*payment section */
 
+#credit_card_form {
+
+    margin-bottom: 10px;
+
+}
+
+#date_and_cvv {
+
+    width: 100%;
+
+}
+
+#expiry_date {
+
+    width: 100%;
+
+}
+
+#CVV {
+
+    width: 100%;
+
+}
+
 /* container */
 #payment_section {
 
     background-color: rgb(255, 255, 255);
-    margin: 10px
+    padding-bottom: 10px;
+    margin: 10px;
 
 }
 
@@ -168,18 +199,37 @@
 #shipping_methods_section {
 
     background-color: rgb(255, 255, 255);
-    margin: 10px
+    margin: 10px;
 
 }
 
 /* order summary section */ 
+
+#amount_of_items {
+
+    margin-left: 30px;
+
+}
+
+#order_summary_item_list hr{
+
+    width: 90%;
+
+}
+
+#order_summary_item_list {
+
+    margin: 10px;
+
+}
 
 /* container */
 #order_summary_section {
 
     background-color: rgb(255, 255, 255);
     width: 33%;
-    margin: 10px
+    margin: 10px;
+    height: fit-content;
 
 }
 
@@ -187,7 +237,7 @@
 
     display: flex;
     flex-direction: row;
-
+    justify-content: space-between;
 }
 
 .order_summary_info_item {
@@ -195,6 +245,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 10px;
 
 }
 
