finishing checkout page. Now need to create purchased page.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1629,7 +1629,7 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  font-size: 60px;
+  font-size: 30px;
 }
 
 #checkout_div_wrapper {
@@ -1817,9 +1817,14 @@
 
 #order_summary_item_list {
   margin: 10px;
+  overflow: auto;
+  height: 220px;
 }
 
-/* container */
+#name_and_brand_summary {
+  width: 90%;
+}
+
 #order_summary_section {
   background-color: white;
   width: 33%;
@@ -1854,6 +1859,16 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 10px;
+}
+
+#summary_button_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 10px;
 }
 
 body {
