--- a/public/styles/checkout.scss
+++ b/public/styles/checkout.scss
@@ -25,7 +25,7 @@
 #announce {
 
     align-self: center;
-    font-size: 60px;
+    font-size: 30px;
 
 }
 
@@ -220,10 +220,18 @@
 #order_summary_item_list {
 
     margin: 10px;
+    overflow: auto;
+    height: 220px;
 
 }
 
-/* container */
+#name_and_brand_summary {
+
+    width: 90%;
+
+}
+
+
 #order_summary_section {
 
     background-color: rgb(255, 255, 255);
@@ -246,6 +254,14 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 10px;
+
+}
+
+#summary_button_container {
+
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
 
 }
 
